Fix darkmode slider, Add dark mode pattern

--- a/client/css/settings.css
+++ b/client/css/settings.css
@@ -34,11 +34,11 @@
   content: "";
   height: 26px;
   width: 26px;
-  left: 4px;
-  bottom: 4px;
+  left: 2px;
+  bottom: 2px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 input:checked+.slider {
